update SVM parameters

--- a/25_projet_data_scientist/reports/4_classification/biblio.bib
+++ b/25_projet_data_scientist/reports/4_classification/biblio.bib
@@ -279,3 +279,44 @@ wiki:utm,
 	year={2016},
 	url={http://www.insee.fr/fr/ppp/bases-de-donnees/recensement/populations-legales/pages2015/zip/HIST_POP_COM_RP13.zip}
 }
+
+@article{smote,
+	 author = {Chawla, Nitesh V. and Bowyer, Kevin W. and Hall, Lawrence O. and Kegelmeyer, W. Philip},
+	  title = {SMOTE: Synthetic Minority Over-sampling Technique},
+	   journal = {J. Artif. Int. Res.},
+	    issue_date = {January 2002},
+	     volume = {16},
+	      number = {1},
+	       month = jun,
+	        year = {2002},
+		 issn = {1076-9757},
+		  pages = {321--357},
+		   numpages = {37},
+		    url = {http://dl.acm.org/citation.cfm?id=1622407.1622416},
+		     acmid = {1622416},
+		      publisher = {AI Access Foundation},
+		       address = {USA},
+} 
+
+@article{libsvm,
+	 author = {Chang, Chih-Chung and Lin, Chih-Jen},
+	  title = {{LIBSVM}: A library for support vector machines},
+	   journal = {ACM Transactions on Intelligent Systems and Technology},
+	    volume = {2},
+	     issue = {3},
+	      year = {2011},
+	       pages = {27:1--27:27},
+	        note =	 {Software available at \url{http://www.csie.ntu.edu.tw/~cjlin/libsvm}}
+}
+
+@misc{suisse,
+	url = {https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.assetdetail.1401563.html}
+}
+
+@misc{belgique,
+	url = {https://fr.wikipedia.org/wiki/Liste_des_communes_de_Belgique_par_population}
+}
+
+@misc{pays-bas,
+	url = {https://www.citypopulation.de/php/netherlands-admin.php}
+}
