finalize final latex report

--- a/25_projet_data_scientist/reports/4_classification/biblio.bib
+++ b/25_projet_data_scientist/reports/4_classification/biblio.bib
@@ -310,13 +310,31 @@ wiki:utm,
 }
 
 @misc{suisse,
+	title = {La population de la Suisse 2015},
+	organization = {Office fédéral de la statistique},
+	year = {2013},
 	url = {https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.assetdetail.1401563.html}
 }
 
 @misc{belgique,
+	title = {Chiffre global de la population par commune},
+	organization = {Service public fédéral intérieur},
+	year = {2015},
 	url = {https://fr.wikipedia.org/wiki/Liste_des_communes_de_Belgique_par_population}
 }
 
 @misc{pays-bas,
+	title = {Provinces and Municipalities},
+	organization = {Statistics Netherlands},
+	year = {2014},
 	url = {https://www.citypopulation.de/php/netherlands-admin.php}
 }
+
+@article{gemi,
+	author={Pinty, B. And Verstraete, M.M.},
+	title={GEMI: a non-linear index to monitor global vegetation from satellites},
+	journal={Vegetation},
+	year={1992},
+	volume={101},
+	pages={15-20}
+}	
